force-app/main/default/objects/MUSW__Master_Submission_List__c/MUSW__Master_Submission_List__c.object-meta.xml
<CustomObject>
    <label>Submission Template</label>
    <nameField>
        <label>Submission Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submission Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>