force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/Avo_Compliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Compliance_Type__c</fullName>
    <label>Compliance Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Compliance_Type</valueSetName>
    </valueSet>
</CustomField>