force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/avo_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>avo_Legacy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>