force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/Avo_Offset__c.field-meta.xml
<CustomField>
    <fullName>Avo_Offset__c</fullName>
    <label>Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>