force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/BG_File_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>BG_File_Location_Type__c</fullName>
    <label>BG File Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Bluebeam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>