force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>License_Type</valueSetName>
    </valueSet>
</CustomField>