force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/Manual_Creation_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Manual_Creation_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Manual Creation Allowed</label>
    <type>Checkbox</type>
</CustomField>