force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/MUSW__Permit_Phases__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Permit_Phases__c</fullName>
    <label>Permit Phases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Permit_Phases</valueSetName>
    </valueSet>
</CustomField>