force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/MUSW__Submission_Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Submission_Description__c</fullName>
    <label>Submission Description</label>
    <type>TextArea</type>
</CustomField>