force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/MUSW__Submission_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Submission_Name__c</fullName>
    <label>Submission Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>