force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/MUSW__Template_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Template_Object_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creation Mapping</label>
    <referenceTo>MUSW__Template_Object_Mapping__c</referenceTo>
    <relationshipLabel>Submission Templates</relationshipLabel>
    <relationshipName>Submission_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>