force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>TextArea</type>
</CustomField>