force-app/main/default/objects/MUSW__Master_Submission_List__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subtype</valueSetName>
    </valueSet>
</CustomField>