force-app/main/default/objects/MUSW__Master_Submission_List__c/recordTypes/MUSW__Application_Submission.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Application_Submission</fullName>
    <active>true</active>
    <label>Application Submission</label>
</RecordType>