force-app/main/default/objects/MUSW__Master_Submission_List__c/recordTypes/MUSW__License_Submission.recordType-meta.xml
<RecordType>
    <fullName>MUSW__License_Submission</fullName>
    <active>true</active>
    <label>License Submission</label>
</RecordType>