force-app/main/default/objects/MUSW__Master_Submission_List__c/recordTypes/MUSW__Permit_Submission.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Permit_Submission</fullName>
    <active>false</active>
    <label>Permit Submission</label>
</RecordType>