force-app/main/default/objects/MUSW__Master_Submission_List__c/recordTypes/Permit.recordType-meta.xml
<RecordType>
    <fullName>Permit</fullName>
    <active>true</active>
    <description>Permit Submissions</description>
    <label>Permit</label>
</RecordType>