force-app/main/default/objects/MUSW__Master_Submission_List__c/listViews/All_Submission_Templates.listView-meta.xml
<ListView>
    <fullName>All_Submission_Templates</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Manual_Creation_Allowed__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <columns>Effective_End_Date__c</columns>
    <columns>Avo_Compliance_Type__c</columns>
    <columns>Avo_Metering_Type__c</columns>
    <columns>Avo_Permit_Type__c</columns>
    <columns>Record_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>All Submission Templates</label>
</ListView>