force-app/main/default/objects/MUSW__Master_Submission_List__c/listViews/Permit_Submission.listView-meta.xml
<ListView>
    <fullName>Permit_Submission</fullName>
    <columns>NAME</columns>
    <columns>Permit_Type__c</columns>
    <columns>MUSW__Submission_Name__c</columns>
    <columns>Subtype__c</columns>
    <columns>Title__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Required__c</columns>
    <columns>BG_File_Location_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Active__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <columns>Effective_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permit_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Permit Submission</label>
</ListView>